--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "sum":"npm dummy.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
